2006-06-02  Joel Brobecker  <brobecker@adacore.com>

	* version.in: Increase version number to 6.4.91 after the first
	pre-release has been created.

2006-06-02  Joel Brobecker  <brobecker@adacore.com>

	* configure.ac: -Werror is no longer enabled by default.
	* configure: Regenerate.

2006-05-27  Joel Brobecker  <brobecker@adacore.com>

	From Peter Schauer <peterschauer@gmx.net>
	* m2-typeprint.c (m2_record_fields): Move variable declarations
	to the begining of the block.

2006-05-20  Gaius Mulley  <gaius@glam.ac.uk>

	* NEWS: (Improved Modula-2 language support): New section.

2006-05-19  Joel Brobecker  <brobecker@adacore.com>

	* configure: Regenerate using proper version of autoconf.

2006-05-16  Joel Brobecker  <brobecker@adacore.com>

	* README: Update date of last modification.

2006-05-16  Joel Brobecker  <brobecker@adacore.com>

	* README: Update GDB version number.

2006-05-16  Joel Brobecker  <brobecker@adacore.com>

	* NEWS: Change "Changes since GDB 6.4" into "Changes in GDB 6.5".

2006-05-16  Joel Brobecker  <brobecker@adacore.com>

	* version.in: Update to 6.4.90.

2006-05-14  Nick Roberts  <nickrob@snap.net.nz>

	* mi/gdb-mi.el (gdbmi-send): Correct regexp for repeat commands.
	(gdbmi): Use new variable name gdb-pc-address.
	(gdbmi-frame-handler):  Use new variable name gdb-pc-address.
	Check that a match has been found.

2006-05-13  Gaius Mulley  <gaius@glam.ac.uk>

	* m2-lang.h: Added function extern prototypes for
	m2_is_long_set and get_long_set_bounds.
	* m2-typeprint.c: Complete replacement.
	(m2_print_type): Walk the Modula-2 type tree.
	(m2_type_name): New function.
	(m2_range): New function.
	(m2_typedef): New function.
	(m2_array): New function.
	(m2_pointer): New function.
	(m2_ref): New function.
	(m2_unknown): New function.
	(m2_union): New function.
	(m2_procedure): New function.
	(m2_print_bounds): New function.
	(m2_short_set): New function.
	(m2_is_long_set): New function.
	(m2_get_discrete_bounds): New function.